--- a/index.html
+++ b/index.html
@@ -210,74 +210,46 @@
             Director of Financial Operations (<a href="#Soven">Soven</a>)<br>
             Director of External Affairs (<a href="#Firuze">Firuze</a>)<br>
             Director of Internal Affairs (<a href="#Sachi">Sachi</a>)<br>
-            Directors of Advocacy (<a href="#Carissa">Carissa</a> &amp; <a href="#Autumn">Autumn</a>)<br>
-            Directors of Outreach (<a href="#Devin">Devin</a> &amp; <a href="#Margaux">Margaux</a>)<br>
+            Directors of Advocacy (<a href="#Clare">Clare</a>)<br>
+            Directors of Outreach (<a href="#Devin">Devin</a> &amp; <a href="#Madi">Madi</a> &amp; <a href="#Ryan">Ryan</a>)<br>
+            Director of Public Relations (<a href="#Camila">Camila</a>)<br>
             Social Media Chairs (<a href="#Maryam">Maryam</a> &amp; <a href="#EmilyQ">Emily</a>)<br>
-            Technology Chair (<a href="#Isabella">Isabella</a>)<br>
-            Graphic Designs Chair (<a href="#RaeAnn">RaeAnn</a>)<br>
-            Community Gardens Chair (<a href="#Ogechi">Ogechi</a>)<br>
-            Greek Relations Chairs (<a href="#Isabella">Isabella</a> &amp; <a href="#Samantha">Samantha</a>)<br><br>
+            Technology Chair (<a href="#Elizabeth">Elizabeth</a>)<br>
+            Graphic Designs Chair (<a href="#Tyler">Tyler</a>)<br>
+            Community Gardens Chair (<a href="#Zannatul">Zannatul</a>)<br><a href="#Ryan">Ryan</a>)<br>
+            Greek Relations Chairs (<a href="#Isabella">Isabella</a>)<br><br>
           </div>
           <div class="grid">
             <div>
               <a>
-                <figure id="Autumn">
-                  <img src="images/Autumn 73.jpg" alt="">
+                <figure id="Camila">
+                  <img src="images/camilla_beatriz.jpg" alt="">
                   <h2>
-                    Autumn Gupta
+                    Camila Beatriz
                   </h2>
                   <em>
-                    Co-Director of Advocacy
+                    Director of Public Relations
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Junior
+                    <strong>Year:</strong> Sophomore
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Studies
+                    <strong>Major:</strong> Theatre and Dramatic Arts
                   </figcaption>
                   <figcaption>
-                    <strong>Minor:</strong> Spatial Studies
+                    <strong>Hometown:</strong> San Juan, Puerto Rico
                   </figcaption>
                   <figcaption>
-                    <strong>Hometown:</strong> Smithville, Missouri
+                    <strong>Fun Fact:</strong> In my spare time I enjoy clapping my hands together vigorously
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact:</strong> My secret talent is lassoing
-                  </figcaption>
-                  <figcaption>
-                    <strong>Spirit Vegetable:</strong> CARROTS
-                  </figcaption>
-                </figure>
-              </a>
-              <a>
-                <figure id="Carissa">
-                  <img src="images/Carissa.jpg" alt="">
-                  <h2>
-                   Carissa Velasquez
-                  </h2>
-                  <em>
-                    Co-Director of Advocacy
-                  </em>
-                  <figcaption>
-                    <strong>Year:</strong> Junior
-                  </figcaption>
-                  <figcaption>
-                    <strong>Majors:</strong> Political Science and NGO's & Social Change
-                  </figcaption>
-                  <figcaption>
-                     <strong>Hometown:</strong> Porterville, CA
-                  </figcaption>
-                  <figcaption>
-                    <strong>Fun Fact:</strong> I've seen every episode of Ancient Aliens at least 10 times each. Highly obsessed with aliens.
-                  </figcaption>
-                  <figcaption>
-                    <strong>Spirit Vegetable:</strong> Onion. They have layers
+                    <strong>Spirit Vegetable:</strong> Tomato
                   </figcaption>
                 </figure>
               </a>
               <a>
                 <figure id="Claire">
-                  <img src="images/Claire.jpg" alt="">
+                  <img src="images/clare_mauss.jpg" alt="">
                   <h2>
                     Claire Mauss
                   </h2>
@@ -302,8 +274,37 @@
                 </figure>
               </a>
               <a>
+                <figure id="Clare">
+                  <img src="images/clare_chandler.jpg" alt="">
+                  <h2>
+                   Clare Chandler
+                  </h2>
+                  <em>
+                    Co-Director of Advocacy
+                  </em>
+                  <figcaption>
+                    <strong>Year:</strong> Sophomore
+                  </figcaption>
+                  <figcaption>
+                    <strong>Major:</strong> Environmental Studies
+                  </figcaption>
+                   <figcaption>
+                    <strong>Minor:</strong> Economics
+                  </figcaption>
+                  <figcaption>
+                     <strong>Hometown:</strong> Indianapolis, IN
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> Once at the MOMA in New York, my little brother walked up to a Jackson Pollock painting and rubbed his face on it (age ~4)
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Edamame
+                  </figcaption>
+                </figure>
+              </a>
+              <a>
                 <figure id="Devin">
-                  <img src="images/Devin.jpg" alt="">
+                  <img src="images/devin_manion.jpg" alt="">
                   <h2>
                     Devin Manion
                   </h2>
@@ -328,8 +329,37 @@
                 </figure>
               </a>
               <a>
+                <figure id="Elizabeth">
+                  <img src="images/elizabeth_berson.jpg" alt="">
+                  <h2>
+                    Elizabeth Berson
+                  </h2>
+                  <em>
+                    Technology Chair
+                  </em>
+                  <figcaption>
+                    <strong>Year:</strong> Sophomore
+                  </figcaption>
+                  <figcaption>
+                    <strong>Major:</strong> Industrial and Systems Engineering
+                  </figcaption>
+                  <figcaption>
+                    <strong>Minor:</strong> Web Technologies and Applications
+                  </figcaption>
+                  <figcaption>
+                   <strong>Hometown:</strong> St. Louis, MO
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong> I know all the elements of the periodic table
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Brussel Sprout
+                  </figcaption>
+                </figure>
+              </a>
+              <a>
                 <figure id="EmilyP">
-                  <img src="images/esa-logo.png" alt="">
+                  <img src="images/emily_palmer.jpg" alt="">
                   <h2>
                     Emily Palmer
                   </h2>
@@ -366,7 +396,10 @@
                     <strong>Year:</strong> Junior
                   </figcaption>
                   <figcaption>
-                    <strong>Majors:</strong> Environmental Studies and Political Economics
+                    <strong>Major:</strong> Environmental Science and Technology
+                  </figcaption>
+                  <figcaption>
+                    <strong>Minors:</strong> PR and Marketing
                   </figcaption>
                   <figcaption>
                     <strong>Hometown:</strong> Rye, NY
@@ -407,12 +440,12 @@
               </a>
               <a>
                 <figure id="Isabella">
-                  <img src="images/Isabella 71.jpg" alt="">
+                  <img src="images/isabella_caltabiano.jpg" alt="">
                   <h2>
                     Isabella Caltabiano
                   </h2>
                   <em>
-                    Technology Chair and Co-Greek Relations Chair
+                    Greek Relations Chair
                   </em>
                   <figcaption>
                     <strong>Year:</strong> Sophomore
@@ -461,28 +494,28 @@
                 </figure>
               </a>
               <a>
-                <figure id="Margaux">
-                  <img src="images/esa-logo.png" alt="">
+                <figure id="Madi">
+                  <img src="images/madi_david.png" alt="">
                   <h2>
-                    Margaux Wilson
+                    Madi David
                   </h2>
                   <em>
                     Co-Director of Outreach
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Junior
+                    <strong>Year: Sophomore</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> Environmental Engineering
+                    <strong>Major: Environmental Studies</strong>
                   </figcaption>
                   <figcaption>
-                   <strong>Hometown:</strong> Milwaukee, WI
+                    <strong>Hometown: Sydney, Australia</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact:</strong> Sasha Obama called me out for being "too old" for the crowd at a musical festival last summer.
+                    <strong>Fun Fact: I'm currently taking REL 134!</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable:</strong> Cherry tomato
+                    <strong>Spirit Vegetable: Tomato</strong>
                   </figcaption>
                 </figure>
               </a>
@@ -513,32 +546,6 @@
                 </figure>
               </a>
               <a>
-                <figure id="Ogechi">
-                  <img src="images/Ogechi 59.jpg" alt="">
-                  <h2>
-                    Ogechi Ibeanusi
-                  </h2>
-                  <em>
-                    Community Gardens Chair
-                  </em>
-                  <figcaption>
-                    <strong>Year:</strong> Senior
-                  </figcaption>
-                  <figcaption>
-                    <strong>Majors:</strong> History & English
-                  </figcaption>
-                  <figcaption>
-                   <strong>Hometown:</strong> Pacifica, CA
-                  </figcaption>
-                  <figcaption>
-                    <strong>Fun Fact:</strong> I like to go horse-back riding in my free time.
-                  </figcaption>
-                  <figcaption>
-                    <strong>Spirit Vegetable:</strong> Carrot
-                  </figcaption>
-                </figure>
-              </a>
-              <a>
                 <figure id="OliviaP">
                   <img src="images/Olivia 71.jpg" alt="">
                   <h2>
@@ -565,34 +572,34 @@
                 </figure>
               </a>
               <a>
-                <figure id="RaeAnn">
-                  <img src="images/esa-logo.png" alt="">
+                <figure id="Ryan">
+                  <img src="images/ryan_nhu.jpg" alt="">
                   <h2>
-                    RaeAnn Noakes
+                    Ryan Nhu
                   </h2>
                   <em>
-                    Graphic Designs Chair
+                    Co-Director of Outreach
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> Sophomore
+                    <strong>Year:</strong> Freshman
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong>
+                    <strong>Majors: Law, History and Culture (B.A.) & Environmental Studies (B.S.)</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Hometown:</strong> Baltimore, MD
+                    <strong>Hometown:</strong> Irvine, CA
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact:</strong>
+                    <strong>Fun Fact: I make kombucha!</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable:</strong>
+                    <strong>Spirit Vegetable: Cauliflower</strong>
                   </figcaption>
                 </figure>
               </a>
               <a>
                 <figure id="Sachi">
-                  <img src="images/Sachi 59.jpg" alt="">
+                  <img src="images/sachi_elias.jpg" alt="">
                   <h2>
                     Sachi Elias
                   </h2>
@@ -617,34 +624,8 @@
                 </figure>
               </a>
               <a>
-                <figure id="Samantha">
-                  <img src="images/esa-logo.png" alt="">
-                  <h2>
-                    Samantha Archie
-                  </h2>
-                  <em>
-                    Co-Greek Relations Chair
-                  </em>
-                  <figcaption>
-                    <strong>Year:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Major:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Hometown:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Fun Fact:</strong>
-                  </figcaption>
-                  <figcaption>
-                    <strong>Spirit Vegetable:</strong>
-                  </figcaption>
-                </figure>
-              </a>
-              <a>
                 <figure id="Soven">
-                  <img src="images/Soven.jpg" alt="">
+                  <img src="images/soven_bery.jpg" alt="">
                   <h2>
                     Soven Bery
                   </h2>
@@ -665,6 +646,64 @@
                   </figcaption>
                   <figcaption>
                     <strong>Spirit Vegetable:</strong> Corn
+                  </figcaption>
+                </figure>
+              </a>
+              <a>
+                <figure id="Tyler">
+                  <img src="images/esa_logo.png" alt="">
+                  <h2>
+                    Tyler Yee
+                  </h2>
+                  <em>
+                    Graphics Chair
+                  </em>
+                  <figcaption>
+                    <strong>Year:</strong> Sophomore
+                  </figcaption>
+                  <figcaption>
+                    <strong>Major:</strong> Art/Design
+                  </figcaption>
+                   <figcaption>
+                    <strong>Minor:</strong> Environmental Science and Technolgoy
+                  </figcaption>
+                  <figcaption>
+                   <strong>Hometown:</strong> Bay Area
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact:</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Sweet Potato
+                  </figcaption>
+                </figure>
+              </a>
+              <a>
+                <figure id="Zannatul">
+                  <img src="images/zannatul_zannat.jpg" alt="">
+                  <h2>
+                    Zannatul Zannat
+                  </h2>
+                  <em>
+                    Communitiy Gardens Chair
+                  </em>
+                  <figcaption>
+                    <strong>Year:</strong> 
+                  </figcaption>
+                  <figcaption>
+                    <strong>Major:</strong> 
+                  </figcaption>
+                   <figcaption>
+                    <strong>Minor:</strong> 
+                  </figcaption>
+                  <figcaption>
+                   <strong>Hometown:</strong> Boston, MA
+                  </figcaption>
+                  <figcaption>
+                    <strong>Fun Fact: Sometimes I like to hop to class on one foot</strong>
+                  </figcaption>
+                  <figcaption>
+                    <strong>Spirit Vegetable:</strong> Tomato
                   </figcaption>
                 </figure>
               </a>
