--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
               </a>
               <a>
                 <figure id="Firuze">
-                  <img src="images/esa-logo.png" alt="">
+                  <img src="images/firuze_barimani.jpg" alt="">
                   <h2>
                     Firuze Barimani
                   </h2>
@@ -547,7 +547,7 @@
               </a>
               <a>
                 <figure id="OliviaP">
-                  <img src="images/Olivia 71.jpg" alt="">
+                  <img src="images/olivia_pearson.jpg" alt="">
                   <h2>
                     Olivia Pearson
                   </h2>
@@ -651,7 +651,7 @@
               </a>
               <a>
                 <figure id="Tyler">
-                  <img src="images/esa_logo.png" alt="">
+                  <img src="images/esa-logo.png" alt="">
                   <h2>
                     Tyler Yee
                   </h2>
