--- a/index.html
+++ b/index.html
@@ -210,14 +210,14 @@
             Director of Financial Operations (<a href="#Soven">Soven</a>)<br>
             Director of External Affairs (<a href="#Firuze">Firuze</a>)<br>
             Director of Internal Affairs (<a href="#Sachi">Sachi</a>)<br>
-            Directors of Advocacy (<a href="#Clare">Clare</a>)<br>
+            Director of Advocacy (<a href="#Clare">Clare</a>)<br>
             Directors of Outreach (<a href="#Devin">Devin</a> &amp; <a href="#Madi">Madi</a> &amp; <a href="#Ryan">Ryan</a>)<br>
             Director of Public Relations (<a href="#Camila">Camila</a>)<br>
             Social Media Chairs (<a href="#Maryam">Maryam</a> &amp; <a href="#EmilyQ">Emily</a>)<br>
             Technology Chair (<a href="#Elizabeth">Elizabeth</a>)<br>
             Graphic Designs Chair (<a href="#Tyler">Tyler</a>)<br>
-            Community Gardens Chair (<a href="#Zannatul">Zannatul</a>)<br><a href="#Ryan">Ryan</a>)<br>
-            Greek Relations Chairs (<a href="#Isabella">Isabella</a>)<br><br>
+            Community Gardens Chair (<a href="#Zannatul">Zannatul</a>)<br>
+            Greek Relations Chair (<a href="#Isabella">Isabella</a>)<br><br>
           </div>
           <div class="grid">
             <div>
@@ -506,16 +506,16 @@
                     <strong>Year: Sophomore</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Major: Environmental Studies</strong>
+                    <strong>Major:</strong>
                   </figcaption>
                   <figcaption>
                     <strong>Hometown: Sydney, Australia</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact: I'm currently taking REL 134!</strong>
+                    <strong>Fun Fact:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable: Tomato</strong>
+                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
@@ -584,16 +584,16 @@
                     <strong>Year:</strong> Freshman
                   </figcaption>
                   <figcaption>
-                    <strong>Majors: Law, History and Culture (B.A.) & Environmental Studies (B.S.)</strong>
+                    <strong>Majors:</strong> Law, History and Culture (B.A.) & Environmental Studies (B.S.)
                   </figcaption>
                   <figcaption>
                     <strong>Hometown:</strong> Irvine, CA
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact: I make kombucha!</strong>
+                    <strong>Fun Fact:</strong> I make kombucha!
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable: Cauliflower</strong>
+                    <strong>Spirit Vegetable:</strong> Cauliflower
                   </figcaption>
                 </figure>
               </a>
@@ -700,10 +700,10 @@
                    <strong>Hometown:</strong> Boston, MA
                   </figcaption>
                   <figcaption>
-                    <strong>Fun Fact: Sometimes I like to hop to class on one foot</strong>
+                    <strong>Fun Fact:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable:</strong> Tomato
+                    <strong>Spirit Vegetable:</strong> 
                   </figcaption>
                 </figure>
               </a>
