--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div>
               <a>
                 <figure id="Camila">
-                  <img src="images/camilla_beatriz.jpg" alt="">
+                  <img src="images/camilla_beatriz.JPG" alt="">
                   <h2>
                     Camila Beatriz
                   </h2>
@@ -249,7 +249,7 @@
               </a>
               <a>
                 <figure id="Claire">
-                  <img src="images/clare_mauss.jpg" alt="">
+                  <img src="images/clare_mauss.JPG" alt="">
                   <h2>
                     Claire Mauss
                   </h2>
@@ -275,7 +275,7 @@
               </a>
               <a>
                 <figure id="Clare">
-                  <img src="images/clare_chandler.jpg" alt="">
+                  <img src="images/clare_chandler.JPG" alt="">
                   <h2>
                    Clare Chandler
                   </h2>
@@ -304,7 +304,7 @@
               </a>
               <a>
                 <figure id="Devin">
-                  <img src="images/devin_manion.jpg" alt="">
+                  <img src="images/devin_manion.JPG" alt="">
                   <h2>
                     Devin Manion
                   </h2>
@@ -330,7 +330,7 @@
               </a>
               <a>
                 <figure id="Elizabeth">
-                  <img src="images/elizabeth_berson.jpg" alt="">
+                  <img src="images/elizabeth_berson.JPG" alt="">
                   <h2>
                     Elizabeth Berson
                   </h2>
@@ -359,7 +359,7 @@
               </a>
               <a>
                 <figure id="EmilyP">
-                  <img src="images/emily_palmer.jpg" alt="">
+                  <img src="images/emily_palmer.JPG" alt="">
                   <h2>
                     Emily Palmer
                   </h2>
@@ -414,7 +414,7 @@
               </a>
               <a>
                 <figure id="Firuze">
-                  <img src="images/firuze_barimani.jpg" alt="">
+                  <img src="images/firuze_barimani.JPG" alt="">
                   <h2>
                     Firuze Barimani
                   </h2>
@@ -547,7 +547,7 @@
               </a>
               <a>
                 <figure id="OliviaP">
-                  <img src="images/olivia_pearson.jpg" alt="">
+                  <img src="images/olivia_pearson.JPG" alt="">
                   <h2>
                     Olivia Pearson
                   </h2>
@@ -599,7 +599,7 @@
               </a>
               <a>
                 <figure id="Sachi">
-                  <img src="images/sachi_elias.jpg" alt="">
+                  <img src="images/sachi_elias.JPG" alt="">
                   <h2>
                     Sachi Elias
                   </h2>
@@ -625,7 +625,7 @@
               </a>
               <a>
                 <figure id="Soven">
-                  <img src="images/soven_bery.jpg" alt="">
+                  <img src="images/soven_bery.JPG" alt="">
                   <h2>
                     Soven Bery
                   </h2>
@@ -680,7 +680,7 @@
               </a>
               <a>
                 <figure id="Zannatul">
-                  <img src="images/zannatul_zannat.jpg" alt="">
+                  <img src="images/zannatul_zannat.JPG" alt="">
                   <h2>
                     Zannatul Zannat
                   </h2>
