--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div>
               <a>
                 <figure id="Camila">
-                  <img src="images/camilla_beatriz.jpg" alt="">
+                  <img src="images/camila_beatriz.jpg" alt="">
                   <h2>
                     Camila Beatriz
                   </h2>
@@ -249,7 +249,7 @@
               </a>
               <a>
                 <figure id="Claire">
-                  <img src="images/clare_mauss.jpg" alt="">
+                  <img src="images/claire_mauss.jpg" alt="">
                   <h2>
                     Claire Mauss
                   </h2>
@@ -495,7 +495,7 @@
               </a>
               <a>
                 <figure id="Madi">
-                  <img src="images/madi_david.png" alt="">
+                  <img src="images/madi_david.jpg" alt="">
                   <h2>
                     Madi David
                   </h2>
