--- a/index.html
+++ b/index.html
@@ -959,10 +959,12 @@
               <div class="innercontent">
                   <div class="whiteboxed">
                     <br/>
+                     <p>Interested in getting more involved in the USC environmental community? Apply to ESA E-Board for the 2018-19 academic year <a target="_blank" href="http://bit.ly/ESAE-Board18">here</a>! Application closes 4/9 at 11:59pm<br/>
+                     <p>Apply to be the Green Engagement Fund Chair! This position is affiliated with the Office of Sustainability and is in charge of a student run grant program for advancing sustainability on USC's campus! Click <a target="_blank" href="http://bit.ly/GEFChair">here</a> to apply! Application closes 4/9 at 11:59pm<br/>
                      <p>Click <a target="_blank" href="http://docs.google.com/forms/d/e/1FAIpQLScAlpmHlntLHdZ1ffzMlRm687GTYCmfDVEd5fpcZd6GhacWKA/viewform">here</a> for the ESA Member Org Funding Application.<br/>
                       Click <a target="_blank" href="http://docs.google.com/forms/d/1TPKDoubj_MSbZVuMojLJ_0xR2Ajj7npYu2UYjedOk-o/viewform?edit_requested=true#responses">here</a> for the ESA Member Org Media Request Form.</p>
                      <p>Click <a target="_blank" href="https://drive.google.com/file/d/0B7iMSBvk0tztM3dPdGtNMXNDMms/view">here</a> for the Green Engagement Fund application due next spring semester 2018.<br/>
-                     <p>Click <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSe4DQPfAdjfKdBHQAFVkwW_ZIdlBuAGaE2R5RvcaP4CdlJ35w/viewform">here</a> for the ESA E-Board Application.<br/>
+          
                    </div>
                 </div>
               </div>
