--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <a class="blocked" onclick="showEvents();" href="#">Events</a>
     <a class="blocked" onclick="showInitiatives();" href="#">Initiatives</a>
     <a class="blocked" onclick="showEBoard();" href="#">Executive Board</a>
+    <a class="blocked" onclick="showMembership();" href="#">Membership</a>
     <a class="blocked" onclick="showPartners();" href="#">Partners</a>
     <a class="blocked" onclick="showMembers();" href="#">Member Organizations</a>
     <a class="blocked" onclick="showNewsletter();" href="#">News</a>
