--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <li>Empower: give students the resources and opportunities to get involved, voice their interests, and have an impact.</li>
         </ul></div>
         <div class="blackboxed">
-          We meet every Monday from 7pm-8pm in TCC 450
+          We meet every Monday from 7pm-8pm in TCC 450 <br>
           Click <a target="_blank" href="images/map-of-sustainability.png">here</a> to see how we fit into USC’s environmental community!
         </div>
       </div>
