--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         </div>
 
 
-    <div id="events" class="subcontent">
+    <div id="membership" class="subcontent">
         <h1>Membership</h1>
         <div class="innercontent">
           We meet every Monday from 7pm-8pm in TCC 440!
