Updated meeting time/location

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-  
+
   <!-- LOADING SCREEN FOR BETTER UI -->
   <div class="se-pre-con">
     <noscript>
@@ -83,7 +83,7 @@
           <li>Empower: give students the resources and opportunities to get involved, voice their interests, and have an impact.</li>
         </ul></div>
         <div class="blackboxed">
-          We meet every Monday from 7pm-8pm in TCC 450 <br>
+          We meet every Tuesday from 8pm-9pm in THH 114 <br>
           Click <a target="_blank" href="images/map-of-sustainability.png">here</a> to see how we fit into USC’s environmental community!
         </div>
       </div>
@@ -690,13 +690,13 @@
                     Communitiy Gardens Chair
                   </em>
                   <figcaption>
-                    <strong>Year:</strong> 
+                    <strong>Year:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Major:</strong> 
+                    <strong>Major:</strong>
                   </figcaption>
                    <figcaption>
-                    <strong>Minor:</strong> 
+                    <strong>Minor:</strong>
                   </figcaption>
                   <figcaption>
                    <strong>Hometown:</strong> Boston, MA
@@ -705,7 +705,7 @@
                     <strong>Fun Fact:</strong>
                   </figcaption>
                   <figcaption>
-                    <strong>Spirit Vegetable:</strong> 
+                    <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
               </a>
@@ -723,10 +723,10 @@
     <div id="membership" class="subcontent">
         <h1>Membership</h1>
         <div class="innercontent">
-          We meet every Monday from 7pm-8pm in TCC 440!
+          We meet every Tuesday from 8pm-9pm in THH 114!
       </div>
     </div>
-    
+
         <!-- INSTRUCTIONS FOR EDITING PARTNER ORGS
               - to add new partners, add the following where indicated
                     <div class="section group">
@@ -898,7 +898,7 @@
                 <figcaption>
                 </figcaption>
               </figure>
-            </a> 
+            </a>
             <!-- ADD NEW MEMBER ORGS HERE
                   - NOTE: when adding one, delete an empty one below -->
               <!-- If a member or is deleted add these coming soon lines to the bottom
@@ -969,12 +969,13 @@
               <div class="innercontent">
                   <div class="whiteboxed">
                     <br/>
-                     <p>Interested in getting more involved in the USC environmental community? Apply to ESA E-Board for the 2018-19 academic year <a target="_blank" href="http://bit.ly/ESAE-Board18">here</a>! Application closes 4/9 at 11:59pm<br/>
-                     <p>Apply to be the Green Engagement Fund Chair! This position is affiliated with the Office of Sustainability and is in charge of a student run grant program for advancing sustainability on USC's campus! Click <a target="_blank" href="http://bit.ly/GEFChair">here</a> to apply! Application closes 4/9 at 11:59pm<br/>
+
                      <p>Click <a target="_blank" href="http://docs.google.com/forms/d/e/1FAIpQLScAlpmHlntLHdZ1ffzMlRm687GTYCmfDVEd5fpcZd6GhacWKA/viewform">here</a> for the ESA Member Org Funding Application.<br/>
                       Click <a target="_blank" href="http://docs.google.com/forms/d/1TPKDoubj_MSbZVuMojLJ_0xR2Ajj7npYu2UYjedOk-o/viewform?edit_requested=true#responses">here</a> for the ESA Member Org Media Request Form.</p>
+                      Click <a target="_blank" href="https://docs.google.com/forms/d/1kccHtTJnmhe-ZoH_iGQL2abWsN1CRxuKrXOO2l3D6Is/viewform?edit_requested=true">here</a> to apply to be a ESA Member Org
                      <p>Click <a target="_blank" href="https://drive.google.com/file/d/0B7iMSBvk0tztM3dPdGtNMXNDMms/view">here</a> for the Green Engagement Fund application due next spring semester 2018.<br/>
-          
+
+
                    </div>
                 </div>
               </div>
@@ -1017,7 +1018,7 @@
   });
   </script>-->
 <script src="https://code.jquery.com/jquery-2.0.3.min.js" integrity="sha256-sTy1mJ4I/LAjFCCdEB4RAvPSmRCb3CU7YqodohyeOLo=" crossorigin="anonymous"></script>
-<script src="js/jquery.min.js"></script>        
+<script src="js/jquery.min.js"></script>
 </body>
         <!-- Include at end of file -->
         <script src="js/custom.js"></script>
