updated meeting times, changed background

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
    <script src="http://rawgit.com/shaneapen/Image-Preview-for-Links/master/image_preview_for_links.js"></script>-->
 
 </head>
-<body>
+<body style="background-image:url(images/bg/bg.jpg);" id="background">
 
   <!-- LOADING SCREEN FOR BETTER UI -->
-  <div class="se-pre-con">
+  <!-- <div class="se-pre-con">
     <noscript>
       <center>
         <br><br>
         <p style="font-size:20px;color:white;">Your browser does not support Javascript. :(<br>Please <a target="_blank" href="mailto:contact@usclatch.org?Subject=Error in Loading ESA Website - Javascript Disabled" target="_top">email LATCH</a>, our website manager, at contact@usclatch.org if you believe you received this in error.</p>
       </center>
     </noscript>
-  </div>
+  </div> -->
   <!-- END LOADING SCREEN FOR BETTER UI -->
   <!-- MAIN MENU AND LANDING PAGE -->
   <div id="navbars" class="nav" onclick="openNav()">&#9776; Menu</div>
@@ -58,7 +58,7 @@
     </footer>
   </div>
   <div id="landing" class="ESA">
-    <div class="main"><img id="logo" src="images/esa-logo-large.png"></img></div>
+    <div class="main"></div>
     <div class="sub"></div>
   </div>
   <!-- END MAIN MENU AND LANDING PAGE -->
@@ -90,9 +90,6 @@
     </div>
 
 
-
-
-
     <div id="events" class="subcontent">
       <div class="innercontent">
         <h1>Events</h1>
@@ -101,14 +98,6 @@
         </div>
       </div>
     </div>
-
-
-
-
-
-
-
-
 
 
 <!-- INSTRUCTIONS FOR EDITING INITIATIVES
@@ -208,7 +197,7 @@
           <div>
             Executive Directors (<a href="#OliviaP">Olivia</a> &amp; <a href="#EmilyP">Emily</a>)<br>
             Assistant Director (<a href="#Claire">Claire</a>)<br>
-            Diretor of Events (<a href="#Joseph">Joseph</a>)<br>
+            <!-- Diretor of Events (<a href="#Joseph">Joseph</a>)<br> -->
             Director of Financial Operations (<a href="#Soven">Soven</a>)<br>
             Director of External Affairs (<a href="#Firuze">Firuze</a>)<br>
             Director of Internal Affairs (<a href="#Sachi">Sachi</a>)<br>
@@ -217,7 +206,7 @@
             Director of Public Relations (<a href="#Camila">Camila</a>)<br>
             Social Media Chairs (<a href="#Maryam">Maryam</a> &amp; <a href="#EmilyQ">Emily</a>)<br>
             Technology Chair (<a href="#Elizabeth">Elizabeth</a>)<br>
-            Graphic Designs Chair (<a href="#Tyler">Tyler</a>)<br>
+            <!-- Graphic Designs Chair (<a href="#Tyler">Tyler</a>)<br> -->
             Community Gardens Chair (<a href="#Zannatul">Zannatul</a>)<br>
             Greek Relations Chair (<a href="#Isabella">Isabella</a>)<br><br>
           </div>
@@ -225,7 +214,7 @@
             <div>
               <a>
                 <figure id="Camila">
-                  <img src="images/camila_beatriz.jpg" alt="">
+                  <img src="images/camila_beatriz.jpg" alt=""   id="eboard_pics">
                   <h2>
                     Camila Beatriz
                   </h2>
@@ -469,7 +458,7 @@
                   </figcaption>
                 </figure>
               </a>
-              <a>
+              <!-- <a>
                 <figure id="Joseph">
                   <img src="images/esa-logo.png" alt="">
                   <h2>
@@ -494,7 +483,7 @@
                     <strong>Spirit Vegetable:</strong>
                   </figcaption>
                 </figure>
-              </a>
+              </a> -->
               <a>
                 <figure id="Madi">
                   <img src="images/madi_david.jpg" alt="">
@@ -651,7 +640,7 @@
                   </figcaption>
                 </figure>
               </a>
-              <a>
+             <!--  <a>
                 <figure id="Tyler">
                   <img src="images/esa-logo.png" alt="">
                   <h2>
@@ -679,7 +668,7 @@
                     <strong>Spirit Vegetable:</strong> Sweet Potato
                   </figcaption>
                 </figure>
-              </a>
+              </a> -->
               <a>
                 <figure id="Zannatul">
                   <img src="images/zannatul_zannat.jpg" alt="">
